Perkin-UAT/force-app/main/default/objects/B2B_Country_Selector__mdt/B2B_Country_Selector__mdt.object-meta.xml
<CustomObject>
    <label>B2B Country Selector</label>
    <pluralLabel>B2B Country Selectors</pluralLabel>
</CustomObject>