Perkin-UAT/force-app/main/default/objects/B2B_Country_Selector__mdt/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <label>Country Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>