Perkin-UAT/force-app/main/default/objects/B2B_Country_Selector__mdt/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>