Perkin-UAT/force-app/main/default/objects/B2B_Country_Selector__mdt/fields/Sourcing_DC__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_DC__c</fullName>
    <label>Sourcing DC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>